syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.demo.grpc";
option java_outer_classname = "ChatProto";

package chat;

service ChatService {
  rpc SendMessage (ChatMessage) returns (ChatResponse) {}
  rpc StreamMessages (Empty) returns (stream ChatMessage) {}
}

message ChatMessage {
  string sender = 1;
  string content = 2;
  int64 timestamp = 3;
}

message ChatResponse {
  bool success = 1;
  string message = 2;
}

message Empty {} 